Bug 32005 - frv_current_sos doesn't set solib::lm_info
Summary: frv_current_sos doesn't set solib::lm_info
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: gdb (show other bugs)
Version: HEAD
: P2 normal
Target Milestone: 15.2
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-22 14:42 UTC by Simon Marchi
Modified: 2024-08-11 23:32 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Marchi 2024-07-22 14:42:07 UTC
I noticed that the lm_info_frv objects created in frv_current_sos are never moved to the solib object.  This bug was introduced in 8971d2788e ("gdb: link so_list using intrusive_list"), which mistakenly removed the line

    sop->lm_info = std::move (li);

... probably due so a bad merge conflict resolution.

I will fix that and propose cherry-picking the fix to gdb-15-branch.
Comment 1 Sourceware Commits 2024-07-23 14:33:53 UTC
The master branch has been updated by Simon Marchi <simark@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=5a2f7d248a50a868152cb357dd05ebcd860ac244

commit 5a2f7d248a50a868152cb357dd05ebcd860ac244
Author: Simon Marchi <simon.marchi@efficios.com>
Date:   Mon Jul 22 10:42:49 2024 -0400

    gdb/solib-frv: move lm_info object to solib
    
    I noticed that the lm_info_frv objects created in frv_current_sos are
    never moved to the solib object.  This bug was introduced in 8971d2788e
    ("gdb: link so_list using intrusive_list"), which mistakenly removed the
    line
    
        sop->lm_info = std::move (li);
    
    ... probably due so a bad merge conflict resolution.
    
    Re-add this line.
    
    If merged in master, I would cherry-pick this to gdb-15-branch.
    
    Change-Id: I609a1a5ad39e93f70a95ea5ebe3f8ff4ab6a8db2
    Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=32005
    Approved-By: Andrew Burgess <aburgess@redhat.com>
Comment 2 Sourceware Commits 2024-07-23 14:35:03 UTC
The gdb-15-branch branch has been updated by Simon Marchi <simark@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=760242224fba975216ec894e5537aa93c72006a6

commit 760242224fba975216ec894e5537aa93c72006a6
Author: Simon Marchi <simon.marchi@efficios.com>
Date:   Mon Jul 22 10:42:49 2024 -0400

    gdb/solib-frv: move lm_info object to solib
    
    I noticed that the lm_info_frv objects created in frv_current_sos are
    never moved to the solib object.  This bug was introduced in 8971d2788e
    ("gdb: link so_list using intrusive_list"), which mistakenly removed the
    line
    
        sop->lm_info = std::move (li);
    
    ... probably due so a bad merge conflict resolution.
    
    Re-add this line.
    
    If merged in master, I would cherry-pick this to gdb-15-branch.
    
    Change-Id: I609a1a5ad39e93f70a95ea5ebe3f8ff4ab6a8db2
    Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=32005
    Approved-By: Andrew Burgess <aburgess@redhat.com>
Comment 3 Simon Marchi 2024-07-23 14:35:23 UTC
Fixed.
Comment 4 Joel Brobecker 2024-08-11 23:32:09 UTC
FTR - I'm the one who changed the Target Milestone to 15.2 in order to record the fact that the fix was pushed to 15.2 (as well as master).